<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_iq_bg">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/ll_status_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zoho.statusiqsdk.Utils.StatusIQTextView
                android:id="@+id/label_active_incident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="18dp"
                android:paddingEnd="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/active_incident"
                android:textColor="@color/status_iq_black"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/active_incidents_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="9dp" />


            <com.zoho.statusiqsdk.Utils.StatusIQTextView
                android:id="@+id/label_component_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/component_summary"
                android:textColor="@color/status_iq_black"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium">

                <LinearLayout
                    android:id="@+id/status_iq_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/card_background">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin_small"
                        >

                        <ImageView
                            android:id="@+id/img_operational"
                            android:layout_width="@dimen/component_summary_icon"
                            android:layout_height="@dimen/component_summary_icon"
                            android:layout_margin="@dimen/margin_small"
                            android:src="@drawable/status_iq_operational" />

                        <com.zoho.statusiqsdk.Utils.StatusIQTextView
                            android:id="@+id/label_opeartional"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_toEndOf="@id/img_operational"
                            android:textColor="@color/status_iq_operational_bg"
                            android:text="@string/operational" />

                        <ImageView
                            android:id="@+id/img_under_maintenance"
                            android:layout_width="@dimen/component_summary_icon"
                            android:layout_height="@dimen/component_summary_icon"
                            android:layout_margin="@dimen/margin_small"
                            android:layout_toEndOf="@id/label_opeartional"
                            android:src="@drawable/status_iq_under_maintanance" />

                        <com.zoho.statusiqsdk.Utils.StatusIQTextView
                            android:id="@+id/label_under_maintenance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:textColor="@color/status_iq_maintenance_bg"
                            android:layout_toEndOf="@id/img_under_maintenance"
                            android:text="@string/under_maintenance" />


                        <ImageView
                            android:id="@+id/img_degraded_performance"
                            android:layout_width="@dimen/component_summary_icon"
                            android:layout_height="@dimen/component_summary_icon"
                            android:layout_margin="@dimen/margin_small"
                            android:layout_below="@id/img_operational"
                            android:src="@drawable/status_iq_degraded_performance" />

                        <com.zoho.statusiqsdk.Utils.StatusIQTextView
                            android:id="@+id/label_degraded_performance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_below="@id/img_operational"
                            android:textColor="@color/status_iq_degraded_bg"
                            android:layout_toEndOf="@id/img_degraded_performance"
                            android:text="@string/degraded_performance" />

                        <ImageView
                            android:id="@+id/img_major_outage"
                            android:layout_width="@dimen/component_summary_icon"
                            android:layout_height="@dimen/component_summary_icon"
                            android:layout_below="@id/img_under_maintenance"
                            android:layout_marginStart="@dimen/margin_small"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_toEndOf="@id/label_degraded_performance"
                            android:src="@drawable/status_iq_major_outage" />

                        <com.zoho.statusiqsdk.Utils.StatusIQTextView
                            android:id="@+id/label_major_outage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:textColor="@color/status_iq_outage_bg"
                            android:layout_below="@id/label_under_maintenance"
                            android:layout_toEndOf="@id/img_major_outage"
                            android:text="@string/major_outage" />

                        <ImageView
                            android:id="@+id/img_partial_outage"
                            android:layout_width="@dimen/component_summary_icon"
                            android:layout_height="@dimen/component_summary_icon"
                            android:layout_margin="@dimen/margin_small"
                            android:layout_below="@id/img_degraded_performance"
                            android:src="@drawable/status_iq_partial_outage" />

                        <com.zoho.statusiqsdk.Utils.StatusIQTextView
                            android:id="@+id/label_partial_outage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_below="@id/img_degraded_performance"
                            android:layout_toEndOf="@id/img_partial_outage"
                            android:textColor="@color/status_iq_partial_outage_bg"
                            android:text="@string/partial_outage" />

                        <ImageView
                            android:id="@+id/img_informational"
                            android:layout_width="@dimen/component_summary_icon"
                            android:layout_height="@dimen/component_summary_icon"
                            android:layout_margin="@dimen/margin_small"
                            android:layout_below="@id/img_major_outage"
                            android:layout_toEndOf="@id/label_partial_outage"
                            android:src="@drawable/status_iq_informational" />

                        <com.zoho.statusiqsdk.Utils.StatusIQTextView
                            android:id="@+id/label_informational"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_small"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_below="@id/img_major_outage"
                            android:layout_toEndOf="@id/img_informational"
                            android:textColor="@color/status_iq_informational"
                            android:text="@string/informational" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/component_summary_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>